<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <FrameLayout
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.yang.musicplayer.widget.BottomPlayer
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.example.yang.musicplayer.widget.BottomPlayer>
    </FrameLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/menu"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/menu_title"
            android:text="@string/app_name"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_item_text_size"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_scan_music"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_item_text_size"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_play_mode"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:textSize="@dimen/menu_item_text_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_background"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:textSize="@dimen/menu_item_text_size"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_sleep"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:textSize="@dimen/menu_item_text_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_setting"
            android:textColor="@color/ternary_text"/>

        <TextView
            android:id="@+id/txt_exit_app"
            android:textSize="@dimen/menu_item_text_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_top"
            android:gravity="center"
            android:text="@string/text_menu_exit"
            android:textColor="@color/ternary_text"/>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
